// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBoundary /> should display error message 1`] = `
<div
  id="content-container"
>
  <h1>
    Oops! Something went wrong:
  </h1>
  <p
    class="p-3 my-3 bg-secondary-subtle"
  >
    <code>
      Error: This component is broken!
    </code>
  </p>
  <p>
    More detailed information is available in the console of your web browser. On most browsers accessible after pressing 
    <kbd>
      <kbd>
        Ctrl
      </kbd>
      +
      <kbd>
        Shift
      </kbd>
      +
      <kbd>
        J
      </kbd>
    </kbd>
     or 
    <kbd>
      F12
    </kbd>
    .
  </p>
  <p>
    Please report this error to our support team via e-mail: 
    <a
      href="mailto:tech.support@turris.cz"
    >
      tech.support@turris.cz
    </a>
    .
  </p>
</div>
`;

exports[`<ErrorBoundary /> should handle unexpected API error 1`] = `
<div
  id="content-container"
>
  <h1>
    Oops! Something went wrong:
  </h1>
  <p
    class="p-3 my-3 bg-secondary-subtle"
  >
    <code>
      Error: This API request is broken!
    </code>
  </p>
  <p>
    More detailed information is available in the console of your web browser. On most browsers accessible after pressing 
    <kbd>
      <kbd>
        Ctrl
      </kbd>
      +
      <kbd>
        Shift
      </kbd>
      +
      <kbd>
        J
      </kbd>
    </kbd>
     or 
    <kbd>
      F12
    </kbd>
    .
  </p>
  <p>
    Please report this error to our support team via e-mail: 
    <a
      href="mailto:tech.support@turris.cz"
    >
      tech.support@turris.cz
    </a>
    .
  </p>
</div>
`;

exports[`<ErrorBoundary /> should render children components when there's no error 1`] = `
<div>
  <p>
    This is the content of the component.
  </p>
</div>
`;
